--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@ width: 50%;
   <main>
 
   
-    <img src="images/illustration-woman-online-desktop.svg" alt="woman" class="woman">
+    <img src="./images/illustration-woman-online-desktop.svg" alt="woman" class="woman">
     
-<img src="images/illustration-box-desktop.svg" alt="box" class="box">
+<img src="./images/illustration-box-desktop.svg" alt="box" class="box">
    <!--  <div class="images">
     
 
