--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <style>
     .attribution { font-size: 11px; text-align: center; border-bottom: none; }
     .attribution a { color: hsl(228, 45%, 44%); }
-    
+    @media screen and (min-width: 1440px) {
     body{
       background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
       background-repeat: no-repeat;
@@ -75,7 +75,7 @@
 
  
 }
-
+    }
 @media screen and (max-width: 375px) {
   body{
     font-weight: 300;
