--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     main{
       background-color: white;
 
-      width:70%;
+      width:50%;
 
       margin:0 auto;
       border-radius: 12px;
@@ -71,7 +71,7 @@
 .box{
   position:absolute;
    top:190px;
-  left: 70px;
+  left: 200px;
   
   
 }
@@ -80,7 +80,7 @@
   max-height: 380px;
   position: relative;
   top:-10px;
-  left: -110px;
+  left: -19% ;
 
  
 }
@@ -95,7 +95,7 @@
      left: 0;
   }
   main{
-    width:375x;
+    width:70%;
     /* height: 538px; */
     flex-direction: column;
     margin:15vh auto;
